# kege-engine

./: .gitignore  CMakeLists.txt
kege/assets/config/: config.json  keybinds.json  render-graph.json
kege/assets/fonts/: monaco.tga
kege/assets/models/material/: pbr.json
kege/assets/scene/: README.md  scene-example.json  scene.json  ui.json
kege/assets/shaders/: shader-library.json
kege/src/: main.cpp
kege/src/core/audio/core/: audio-buffer.cpp  audio-buffer.hpp  audio-effect.cpp  audio-effect.hpp  audio-listener.cpp  audio-listener.hpp  audio-source-streamer.cpp  audio-source-streamer.hpp  audio-source.cpp  audio-source.hpp  audio-stream.cpp  audio-stream.hpp  audio.cpp  audio.hpp
kege/src/core/audio/open-al/: File.cpp  al-audio-buffer.cpp  al-audio-buffer.hpp  al-audio-effect.cpp  al-audio-effect.hpp  al-audio-listener.cpp  al-audio-listener.hpp  al-audio-source.cpp  al-audio-source.hpp  al-audio-stream.cpp  al-audio-stream.hpp  al-audio.cpp  al-audio.hpp
kege/src/core/container/: array.hpp  asset-system.cpp  asset-system.hpp  bitvec.cpp  hashmap.hpp  kege-string.cpp  resource-manager.hpp
kege/src/core/ecs/: component-cache.cpp  component-cache.hpp  component-manager.cpp  component-manager.hpp  entity-iterator.cpp  entity-iterator.hpp  entity-manager.cpp  entity-manager.hpp  entity-registry.cpp  entity-registry.hpp  entity-view.cpp  entity-view.hpp  entity.cpp  entity.hpp
kege/src/core/engine/: core-ecs.cpp  core-ecs.hpp  core-esm.cpp  core-esm.hpp  core-graphics.cpp  core-graphics.hpp  core-input.cpp  core-input.hpp  core-logging.cpp  core-logging.hpp  core-render-graph.cpp  core-render-graph.hpp  core-vfs.cpp  core-vfs.hpp  engine.cpp  engine.hpp  input-module.cpp  input-module.hpp  logger-module.cpp  logger-module.hpp  module.cpp  module.hpp  scene-module.cpp  scene-module.hpp
kege/src/core/esm/: entity-system-manager.cpp  entity-system-manager.hpp  entity-system.cpp  entity-system.hpp
kege/src/core/graphics/core/: command-encoder.cpp  command-encoder.hpp  command-recorder.cpp  command-recorder.hpp  glfw-window.cpp  graphics.cpp  (+20 more)
kege/src/core/gui/: font.hpp  id-manager.hpp  ui-aligner.cpp  ui-aligner.hpp  ui-canvas.cpp  ui-canvas.hpp  ui-core.cpp  ui-core.hpp  ui-font-creator.cpp  ui-font-creator.hpp  ui-font-loader.cpp  ui-font-loader.hpp  ui-input.hpp  ui-layout.cpp  ui-layout.hpp  ui-primatives.cpp  ui-primatives.hpp  ui-style-loader.cpp  ui-style-loader.hpp  ui-style-manager.cpp  ui-style-manager.hpp  ui-viewer.cpp  ui-viewer.hpp  ui-widget-manager.cpp  ui-widget-manager.hpp
kege/src/core/input/: input-actions.cpp  input-actions.hpp  input-commands.cpp  input-commands.hpp  input-context-loader.cpp  input-context-loader.hpp  input-context-manager.cpp  input-context-manager.hpp  input-context.cpp  input-context.hpp  inputs.cpp  inputs.hpp  keycodes.hpp  thread-safe-vector.cpp  thread-safe-vector.hpp  user-input-receiver.cpp  user-input-receiver.hpp
kege/src/core/io/: file-io.cpp  file-io.hpp  file-watcher.cpp  file-watcher.hpp  file.hpp  virtual-directory.cpp  virtual-directory.hpp
kege/src/core/loader/: component-factory.cpp  image-loader.hpp  material-loader.cpp  pipeline-loader.cpp  pipeline-loader.hpp  render-graph-loader.hpp  scene-loader.hpp
kege/src/core/memory/: mem.hpp  pool.cpp  pool.hpp  ref.hpp
kege/src/core/scene/: entity-tag.cpp  entity-tag.hpp  scene-loader.cpp  scene-loader.hpp  scene.cpp  scene.hpp
kege/src/core/system/: entity-system-manager.cpp  entity-system-manager.hpp  entity-system.cpp  entity-system.hpp  settings.cpp  settings.hpp  system-factory.cpp  system-factory.hpp  system.cpp  system.hpp
kege/src/core/task/: task-executor.cpp  task-executor.hpp  task-manager-system.cpp  task-manager-system.hpp  task-manager.cpp  task-manager.hpp  task.cpp  task.hpp
kege/src/core/utils/: bitvec.hpp  communication.cpp  communication.hpp  communicator.hpp  hashmap.hpp  json-lexer.cpp  json-lexer.hpp  json-parser.cpp  json-parser.hpp  kege-string.hpp  lexer.cpp  lexer.hpp  log.cpp  log.hpp  resource-manager.cpp  resource-manager.hpp  time.cpp  time.hpp
kege/src/editor/: droplist.cpp  droplist.hpp  editor.cpp  editor.hpp  hierarchy-panel.cpp  hierarchy-panel.hpp  inspector-panel.cpp  inspector-panel.hpp  navbar-panel.cpp  navbar-panel.hpp  viewport-panel.cpp  viewport-panel.hpp
kege/src/editor/ui-elements/: droplist.cpp  droplist.hpp  hierarchy-droplist.cpp  hierarchy-droplist.hpp  style.json  ui-button.cpp  ui-button.hpp  ui-menu.cpp  ui-menu.hpp  ui-numeric.cpp  ui-numeric.hpp  ui-numeric3.cpp  ui-numeric3.hpp  ui-numeric4.cpp  ui-numeric4.hpp  ui-options.cpp  ui-options.hpp
kege/src/loader/: component-factory.hpp  image-loader.cpp  image-loader.hpp  material-loader.hpp  mesh-loader.cpp  mesh-loader.hpp  pipeline-loader.hpp  render-graph-loader.cpp  scene-loader.cpp  scene-loader.hpp
kege/src/systems/-/: component-dependencies.hpp  entity-systems.h  system-dependencies.hpp
kege/src/systems/atmosphere/: atmosphere.hpp
kege/src/systems/camera/: camera-controller.cpp  camera-controller.hpp  camera-system.cpp  camera-system.hpp  camera.cpp  camera.hpp  follow-system.cpp  follow-system.hpp  frustum.cpp  frustum.hpp  lookat-system.cpp  lookat-system.hpp  movement-controls.hpp  movement-system.cpp  movement-system.hpp
kege/src/systems/ecs/: ecs-system.cpp  ecs-system.hpp
kege/src/systems/graphics/: graphics-system.cpp  graphics-system.hpp  render-graph-system.cpp  render-graph-system.hpp
kege/src/systems/input/: input-system.cpp  input-system.hpp
kege/src/systems/lighting/: light.cpp  light.hpp  update-light-shader-resource.cpp  update-light-shader-resource.hpp
kege/src/systems/logging/: logging-system.cpp  logging-system.hpp
kege/src/systems/mesh/: mesh-rendering-system.cpp  mesh-rendering-system.hpp
kege/src/systems/picking/: compute-scene-ray.cpp  compute-scene-ray.hpp  dragging-system.cpp  dragging-system.hpp  selection-system.cpp  selection-system.hpp
kege/src/systems/rendering/: rendering-system.cpp  rendering-system.hpp
kege/src/systems/timer/: update-decay-over-time.cpp  update-decay-over-time.hpp
(+379 files in other folders)
